# CPP2020

./: .gitignore  BombSprite.cpp  CMakeLists.txt  CrazySprite.cpp  FireSprite.cpp  Master.cpp  Object.cpp  Sprite.cpp  ThunderSprite.cpp  WaterSprite.cpp  WindSprite.cpp  config.h  main.cpp  mymake.bat  readme.md  report.docx
docs/: grammer.md
include/: BombSprite.h  CrazySprite.h  FireSprite.h  Master.h  Object.h  Sprite.h  ThunderSprite.h  WaterSprite.h  WindSprite.h
