cmake_minimum_required(VERSION 3.16)
project(sprite)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/include)
add_executable(sprite  main.cpp acllib.c Master.cpp config.h Sprite.cpp include/Sprite.h Object.cpp include/Object.h CrazySprite.cpp include/CrazySprite.h WindSprite.cpp include/WindSprite.h ThunderSprite.cpp include/ThunderSprite.h FireSprite.cpp include/FireSprite.h)
target_link_libraries(sprite -lgdi32 -lole32 -loleaut32 -luuid -lwinmm -lmsimg32)